--- a/chatgpt_style_2.css
+++ b/chatgpt_style_2.css
@@ -29,13 +29,14 @@ header::before {
 
 header {
   position: relative;
-  height: 250px;
+  min-height: 250px;
   background-clip: content-box;
   /*backdrop-blur: 100px; /* Blurrer l'image  que l'on met en background, n'est pas supporter pas tout les navigateurs*/
   /* backdrop-filter: blur(20px);*/
   color: white;
   text-align: center;
-  padding: 2em 0;
+  /*padding: 2em 0;*/
+  place-items: center;
 }
 
 
@@ -65,20 +66,24 @@ header a {
 /*Menu navigation d'un  mon fichier */
 nav {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;/*space-between, also interesting justify-content works on the main access(de droit à gauche) and align-items works on the cross access (de haut en bas)*/
+  align-content: space-around;
+  align-items: baseline;
   background-color: none;
   float: right;
-  margin-top: 1px;
+  margin-top: 6px;
   color: white;
   padding: 0;
+  max-width: 40rem;
 }
 
 nav ul {
+  margin: 0 auto;
   list-style: none;
-  margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 nav li {
@@ -95,11 +100,12 @@ main {
 }
 
 .container {
-  max-width: 1200px;
+  min-height: 250px;
+  max-width: 65rem;
   margin: 0 auto;
-  /*margin-left:300px;*/
   text-align: left;
   padding-bottom: 2.5rem;
+  border: 2px solid red;
 }
 
 .container img {
@@ -137,7 +143,7 @@ footer {
   text-align: center;
   padding: 20px 50px;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
   right: 0;
   height: 2.5rem;
@@ -167,188 +173,19 @@ footer > div {
   align-items: center;
 }
 
-footer .copyright-and-socials {
-}
+/*footer .copyright-and-socials {
+}*/
 
-/*Ce mode est applicable pour des outils dont la largeur est maximu  700px
+Ce mode est applicable pour des outils dont la largeur est maximu  700px
 @media only screen and (max-width: 600px){
-  body {
-    font-family: "Open Sans", sans-serif;
-    background-color: #f2f2f2;
-    margin:  0;
-    padding: 0;
-    position: relative;
-    min-height: 100vh;
-    overflow-x: hidden;
-    font-size: 16px;
-  }
 
-  header::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url('crow_generation/baobabs_tree.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 70px;
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
-    z-index: -1;
-  }
-
-  header {
-    position: relative;
-    height: 100px;
-    background-clip: content-box;
-    /*backdrop-blur: 100px; /* Blurrer l'image  que l'on met en background, n'est pas supporter pas tout les navigateurs*/
-    /* backdrop-filter: blur(20px);*/
-/*    color: white;
-    text-align: center;
-    padding: 2em 0;
-  }
-
-
-
-  header h1 {
-    margin: 0;
-    font-weight: normal;
-
-  }
-
-  header h2 {
-    font-weight: 600; /*Semi- bold*/
-  /*  font-size: 16px;
-    color: black;
-    margin: 0;
-    /*width: 20px;*/
-/*  }
-  header h3 {
-    font-weight: lighter;
-    margin: 0;
-    color: black;
-  }
-  header a {
-    float: center;
-    color: white;
-    text-decoration: none;
-    margin-right: 5px; /*Marge entre les différents éléments du header*/
-/*  }
-
-  nav ul {
-    list-style: none;
-    /*  margin: 0;
-    padding: 0;*/
-/*    position: absolute;
-    width: 100%;
-    top: 90px;
-    z-index: 2;
-    right: 0px;
-    left: 10px;
-    /*display: flex;*/
-/*    font-size: 12px;
-  }
-
-/*  nav li {
-    margin: 0 0 1em;
-  }
-  */
-/*  nav ul li{
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  nav a {
-    color: black;
-    text-decoration: none;
-  }
-
-  main {
-    padding: 2em;
-  }
-
-  .container {
-    max-width: 500px;
-    margin: 0 auto;
-    text-align: left;
-    padding: 0 1em
-    padding-bottom: 2.5rem;
-    font-size: 16px;
-  }
 
   .container img {
     float: left;
-    width: 20%;
+    width: 100% auto;
     margin-right: 15px;
   }
 
-
-  .research-section {
-    background-color: white;
-    padding: 2em;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 2em;
-    text-align: center;
-  }
-
-  .research-section:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  .research-section h2 {
-    margin: 0;
-  }
-
-  .research-section p {
-    font-size: 1.2em;
-    margin: 1em 0;
-  }
-
-  footer {
-    background-color: #f2f2f2;
-    text-align: center;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 2.5rem;
-    display: inline-flex;
-    justify-content: space-between;
-    font-size: 9.5px;
-  }
-
-  footer p {
-    margin: 0;
-    font-size: 9.5px;
-  }
-
-  footer > div > p {
-    display: inline-flex;
-    align-items: center;
-  }
-
-  footer a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-    width: 65%;
-  }
-
-
-
-  footer > div {
-    display: inline-flex;
-    align-items: center;
-  }
 
 
 
